--- a/analitics.html
+++ b/analitics.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>Analitics</title>
   <link rel="icon" type="image/svg+xml" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="styles/analitics.c9f3a04f2a1b93c7005e.css">
+  <link rel="stylesheet" href="styles/analitics.c9f3a04f2a1b93c7005e.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
       <h1 class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
-        <a class="nav__item link" href="./about.html">О проекте</a>
+        <a class="nav__item link" href="./about.html">О&nbsp;проекте</a>
       </nav>
     </header>
 
@@ -28,10 +28,10 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
         <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
       <div class="social footer__social">
@@ -44,7 +44,7 @@
 
   </div>
 
-  <script type="text/javascript" src="scripts/analitics.c9f3a04f2a1b93c7005e.js"></script>
+  <script src="scripts/analitics.c9f3a04f2a1b93c7005e.js"></script>
 
 </body>
 
