--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>About</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" type="text/css" href="styles/about.7a5277c6dded1e63a344.css">
+  <link rel="stylesheet" href="styles/about.7a5277c6dded1e63a344.css">
 </head>
 
 <body>
@@ -40,27 +40,27 @@
           нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
       </section>
 
-    <secion class="tech">
-      <h2 class="tech__title">Используемые технологии</h2>
-      <div class="tech__block">
-        <div class="tech__card">
-          <h3 class="tech__name">HTML 5</h3>
-          <img class="tech__logo" type="image/svg+xml" src="images/html.svg" alt="html 5 logo">
+      <secion class="tech">
+        <h2 class="tech__title">Используемые технологии</h2>
+        <div class="tech__block">
+          <div class="tech__card">
+            <h3 class="tech__name">HTML 5</h3>
+            <img class="tech__logo" type="image/svg+xml" src="images/html.svg" alt="html 5 logo">
+          </div>
+          <div class="tech__card">
+            <h3 class="tech__name">CSS 3</h3>
+            <img class="tech__logo" type="image/svg+xml" src="images/css.svg" alt="css 3 logo">
+          </div>
+          <div class="tech__card">
+            <h3 class="tech__name">ES 2019</h3>
+            <img class="tech__logo" type="image/svg+xml" src="images/js.svg" alt="java script 2019 logo">
+          </div>
+          <div class="tech__card">
+            <h3 class="tech__name">WebPack</h3>
+            <img class="tech__logo" type="image/svg+xml" src="images/webpack.svg" alt="web pack logo">
+          </div>
         </div>
-        <div class="tech__card">
-          <h3 class="tech__name">CSS 3</h3>
-          <img class="tech__logo" type="image/svg+xml" src="images/css.svg" alt="css 3 logo">
-        </div>
-        <div class="tech__card">
-          <h3 class="tech__name">ES 2019</h3>
-          <img class="tech__logo" type="image/svg+xml" src="images/js.svg" alt="java script 2019 logo">
-        </div>
-        <div class="tech__card">
-          <h3 class="tech__name">WebPack</h3>
-          <img class="tech__logo" type="image/svg+xml" src="images/webpack.svg" alt="web pack logo">
-        </div>
-      </div>
-    </secion>
+      </secion>
 
       <section class="author">
         <img class="author__pic" src="images/author_full.jpg" alt="site autors photo">
@@ -75,13 +75,31 @@
           harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
           explicabo?</p>
       </section>
+
+      <section class="github">
+        <h2 class="github__title">История коммитов из&nbsp;GitHub</h2>
+        <a href="https://github.com/someDew/newsanalyzer" class="github__link link">Открыть&nbsp;на&nbsp;GitHub<img src="images/arrow.svg" alt="open github" class="link__arrow"></a>
+        <button class="github__button button">Открыть&nbsp;на&nbsp;GitHub</button>
+        
+        <div class="github__slider">
+
+          <div class="github__card">
+            <time class="github__date">2 января, 1988</time>
+            <img class="github__pic" type="image/png" src="images/default-user.png" alt="contributor photo">
+            <h3 class="github__name">Default User</h3>
+            <span class="github__text"></span>
+            <p class="github__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet officia, ut accusantium molestiae itaque eum, quia maiores, adipisci quam repudiandae similique cupiditate dolorem voluptatum nisi odit commodi unde enim praesentium!</p>
+          </div>          
+          
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">© 2019 Andrew</p>
+      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
         <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О проекте</a>
+        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
         <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
       </nav>
       <div class="social footer__social">
@@ -91,7 +109,7 @@
     </footer>
 
   </div>
-  <script type="text/javascript" src="scripts/about.7a5277c6dded1e63a344.js"></script>
+  <script src="scripts/about.7a5277c6dded1e63a344.js"></script>
 </body>
 
 </html>
