Layout analit page. Next - last block - analitics

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -18,13 +18,25 @@
     <header class="header">
       <h1 class="header__logo" alt="NewsAnalyzer">NewsAnalyzer</h1>
       <nav class="nav header__nav">
-        <a class="nav__item nav__item_select link" href="./index.html">Главная</a>
+        <a class="nav__item link" href="./index.html">Главная</a>
         <a class="nav__item link" href="./about.html">О&nbsp;проекте</a>
       </nav>
     </header>
 
     <main class="content">
+      <section class="digits">
+        <nav class="digits__nav">
+          <a class="digits__nav-item link" href="./index.html">Главная</a>
+          <a class="digits__nav-item link" href="./analitics.html">/ Аналитика</a>
+        </nav>
+        <h2 class="digits__title">Вы&nbsp;просили:&nbsp;</h2>
+        <span class="digits__request">&laquo;Челипиздрик, чисто в своей манере&raquo;</span>
+        <div class="digits__block">
+          <p class="digits__header">Новостей&nbsp;за&nbsp;неделю: <span class="digits__per-week">285</span></p>
+          <p class="digits__header">Упоминаний&nbsp;в&nbsp;заголовках: <span class="digits__in-titles">49</span></p>
+        </div>
 
+      </section>
     </main>
 
     <footer class="footer">
