Start layout gisto block

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -30,12 +30,20 @@
           <a class="digits__nav-item link" href="./analitics.html">/ Аналитика</a>
         </nav>
         <h2 class="digits__title">Вы&nbsp;просили:&nbsp;</h2>
-        <span class="digits__request">&laquo;Челипиздрик, чисто в своей манере&raquo;</span>
+        <span class="digits__request">&laquo;Бубылда - нацональный герой&raquo;</span>
         <div class="digits__block">
           <p class="digits__header">Новостей&nbsp;за&nbsp;неделю: <span class="digits__per-week">285</span></p>
           <p class="digits__header">Упоминаний&nbsp;в&nbsp;заголовках: <span class="digits__in-titles">49</span></p>
         </div>
+      </section>
 
+      <section class="graph">
+        <h1 class="graph__title">Аналитика по дням</h1>
+        <div class="graph__block">
+          <div class="gisto">
+            
+          </div>
+        </div>
       </section>
     </main>
 
