Add block graph block

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -41,7 +41,75 @@
         <h1 class="graph__title">Аналитика по дням</h1>
         <div class="graph__block">
           <div class="gisto">
+            <p class="gisto__head-date">ДАТА (СЕНТЯБРЬ)</p>
+            <p class="gisto__head-quantity">КОЛЛИЧЕСТВО УПОМИНАНИЙ</p>
+
+            <div class="gisto__scale">
+              <p class="gisto__mark">0</p>
+              <p class="gisto__mark">25</p>
+              <p class="gisto__mark">50</p>
+              <p class="gisto__mark">75</p>
+              <p class="gisto__mark">100</p>
+            </div>
             
+            
+            <div class="gisto__days-block">
+              <div class="gisto__day">           
+                <time class="gisto__date">31, ср</time>
+                <p class="gisto__quantity">25</p>
+                <div class="gisto__line">
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                </div>
+              </div>
+              <div class="gisto__day">           
+                <time class="gisto__date">32, чт</time>
+                <p class="gisto__quantity">10</p>
+                <div class="gisto__line">
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                  <div class="gisto__line-item"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="gisto__scale">
+              <p class="gisto__mark">0</p>
+              <p class="gisto__mark">25</p>
+              <p class="gisto__mark">50</p>
+              <p class="gisto__mark">75</p>
+              <p class="gisto__mark">100</p>
+            </div>            
           </div>
         </div>
       </section>
