Add disable rulles to notfound and preloader blocks

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,11 +40,11 @@
     </search>
 
     <main class="content">
-      <section class="preloader">
+      <section class="preloader preloader_disable">
         <i class="preloader__spiner"></i>
         <span class="preloader__text">Идет поиск новостей...</span>
       </section>
-      <section class="notfound">
+      <section class="notfound notfoundr_disable">
         <img class="notfound__img" type="image/svg+xml" src="<%=require('../images/notfound.svg')%>" alt="image results not found">
         <p class="notfound__title">Ничего не найдено</p>
         <span class="notfound__text">К сожалению по вашему запросу<br>ничего не найдено.</span>
