Upd search block

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -114,7 +114,7 @@
       </section>
       <section class="author">
         <img class="author__pic" src="<%= require('../images/author_full.jpg') %>" type="image/jpeg" alt="site autors photo">
-        <h4 class="author__title">Об&nbsp;авторе:</h3>
+        <h4 class="author__title">Об&nbsp;авторе</h3>
         <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
           занимаетесь, какими технологиями разработки владете.
           <br><br>
