--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 
       <section class="author">
         <img class="author__pic" src="images/author_full.jpg" alt="site autors photo">
-        <h2 class="author__title">Об авторе:</h2>
+        <h2 class="author__title">Об&nbsp;авторе</h2>
         <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
           занимаетесь, какими технологиями разработки владете.
           <br><br>
