--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </search>
 
     <main class="content">
-      <section class="preloader">
+      <section class="preloader preloader_disable">
         <i class="preloader__spiner"></i>
         <span class="preloader__text">Идет поиск новостей...</span>
       </section>
-      <section class="notfound">
+      <section class="notfound notfoundr_disable">
         <img class="notfound__img" type="image/svg+xml" src="images/notfound.svg" alt="image results not found">
         <p class="notfound__title">Ничего не найдено</p>
         <span class="notfound__text">К сожалению по вашему запросу<br>ничего не найдено.</span>
@@ -114,7 +114,7 @@
       </section>
       <section class="author">
         <img class="author__pic" src="images/author_full.jpg" type="image/jpeg" alt="site autors photo">
-        <h4 class="author__title">Об&nbsp;авторе:</h3>
+        <h4 class="author__title">Об&nbsp;авторе</h3>
         <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
           занимаетесь, какими технологиями разработки владете.
           <br><br>
