--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
       </section>
 
-      <secion class="tech">
+      <section class="tech">
         <h2 class="tech__title">Используемые технологии</h2>
         <div class="tech__block">
           <div class="tech__card">
@@ -62,7 +62,7 @@
             <img class="tech__logo" src="images/webpack.svg" alt="web pack logo">
           </div>
         </div>
-      </secion>
+      </section>
 
       <section class="author">
 
@@ -94,7 +94,7 @@
         <div class="github__slider">
 
           <div class="github__card">
-            <time class="github__card-date">2 января, 1988</time>
+            <span class="github__card-date">2 января, 1988</span>
             <img class="github__card-pic" src="images/default-user.png" alt="contributor photo">
             <h3 class="github__card-name">Default User</h3>
             <a class="github__card-link link" href="">default.mail@web.site</a>
