--- a/analitics.html
+++ b/analitics.html
@@ -18,8 +18,14 @@
     <header class="header">
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
-        <a class="nav__item link" href="./index.html">Главная</a>
-        <a class="nav__item link" href="./about.html">О&nbsp;проекте</a>
+        <ul>
+          <li class="nav__item">
+            <a class="link" href="./index.html">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="link" href="./about.html">О&nbsp;проекте</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -28,8 +34,14 @@
 
       <section class="digits">
         <nav class="digits__nav">
-          <a class="digits__nav-item link" href="./index.html">Главная</a>
-          <a class="digits__nav-item link" href="./analitics.html">/ Аналитика</a>
+          <ul>
+            <li class="digits__nav-item">
+              <a class="link" href="./index.html">Главная</a>
+            </li>
+            <li class="digits__nav-item">
+             <a class="link" href="./analitics.html">/ Аналитика</a>
+            </li>
+          </ul>
         </nav>
         <h2 class="digits__title">Вы&nbsp;просили:&nbsp;</h2>
         <span class="digits__request">&laquo;Бубылда - нацональный герой&raquo;</span>
@@ -394,15 +406,25 @@
     <footer class="footer">
       <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
-        <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
-        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+        <ul>
+          <li class="nav__item">
+            <a class="link" href="index.html">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="link" href="about.html">О&nbsp;проекте</a>
+          </li>
+          <li class="nav__item">
+            <a class="link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+          </li>
+        </ul>
       </nav>
       <div class="social footer__social">
-        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
-            src="images/github.svg"></a>
-        <a class="social__item" href="https://facebook.com"><img alt="facebook"
-            src="images/fb3.svg"></a>
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer">
+          <img alt="github link" src="images/github.svg">
+        </a>
+        <a class="social__item" href="https://facebook.com">
+          <img alt="facebook link" src="images/fb3.svg">
+        </a>
       </div>
     </footer>
 
