--- a/about.html
+++ b/about.html
@@ -18,8 +18,14 @@
     <header class="header">
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
-        <a class="nav__item link" href="./index.html">Главная</a>
-        <a class="nav__item nav__item_select link" href="./about.html">О проекте</a>
+        <ul>
+          <li class="nav__item">
+            <a class="link" href="./index.html">Главная</a>
+          </li>
+          <li class="nav__item  nav__item_select">
+            <a class="link" href="./about.html">О&nbsp;проекте</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -117,9 +123,17 @@
     <footer class="footer">
       <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
       <nav class="nav footer__nav">
-        <a class="nav__item link" href="index.html">Главная</a>
-        <a class="nav__item link" href="about.html">О&nbsp;проекте</a>
-        <a class="nav__item link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+        <ul>
+          <li class="nav__item">
+            <a class="link" href="index.html">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="link" href="about.html">О&nbsp;проекте</a>
+          </li>
+          <li class="nav__item">
+            <a class="link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+          </li>
+        </ul>
       </nav>
       <div class="social footer__social">
         <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
