New form params added

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,9 +40,9 @@
         <h2 class="search__title">Что в мире творится?</h2>
         <h3 class="search__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях
           за прошедшую неделю.</h3>
-        <form action="submit" class="form search__form">
+        <form class="form search__form" action="submit" name="searchForm">
           <div class="search__input">
-            <input type="text" class="input" name="news-search" required placeholder="введите тему запроса">
+            <input type="text" class="input" name="searchInpit" required="yes" placeholder="введите тему запроса">
           </div>
           <button class="button search__button">Искать</button>
           <span class="error search__error"></span>
