JS. Modules CardsList and Card in pogress

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -60,12 +60,12 @@
         <h3 class="notfound__title">Ничего не найдено</h3>
         <span class="notfound__text">Сообщение об<br>ошибке</span>
       </section>
-      <section class="results">
+      <section class="results results_disable">
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть&nbsp;аналитику
           <img src="<%=require('../images/arrow.svg')%>" alt="open github" class="link__arrow">
         </a>
-        <div class="results__block">
+        <div class="cards-list">
 
           <a class="card" href="">
             <img class="card__pic" src="<%=require('../images/card-pic-default.jpg')%>" alt="news photo">
