--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/index.54bdb8027e3246f21c8d.css">
+  <link rel="stylesheet" href="styles/index.20d7d24cbeca88a5fce0.css">
   <title>NewsAnalizer</title>
 </head>
 
@@ -60,12 +60,12 @@
         <h3 class="notfound__title">Ничего не найдено</h3>
         <span class="notfound__text">Сообщение об<br>ошибке</span>
       </section>
-      <section class="results">
+      <section class="results results_disable">
         <h3 class="results__title">Результаты поиска</h3>
         <a class="results__link link" href="analitics.html">Посмотреть&nbsp;аналитику
           <img src="images/arrow.svg" alt="open github" class="link__arrow">
         </a>
-        <div class="results__block">
+        <div class="cards-list">
 
           <a class="card" href="">
             <img class="card__pic" src="images/card-pic-default.jpg" alt="news photo">
@@ -162,7 +162,7 @@
 
   </div>
 
-  <script src="scripts/index.54bdb8027e3246f21c8d.js"></script>
+  <script src="scripts/index.20d7d24cbeca88a5fce0.js"></script>
 
 </body>
 
