Added DateFormater module and constants file. Navigatiov layouts refactoring

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,15 +15,15 @@
 <body>
   <div class="page">
 
-    <header class="header">
+    <header class="header header_main-page">
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <ul>
           <li class="nav__item">
-            <a class="link" href="./index.html">Главная</a>
+            <a class="link" href="./index.html"><div><span>Главная</span></div></a>
           </li>
           <li class="nav__item  nav__item_select">
-            <a class="link" href="./about.html">О&nbsp;проекте</a>
+            <a class="link" href="./about.html"><div><span>О&nbsp;проекте</span></div></a>
           </li>
         </ul>
       </nav>
@@ -125,13 +125,13 @@
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
-            <a class="link" href="index.html">Главная</a>
+            <a class="link" href="index.html"><div><span>Главная</span></div></a>
           </li>
           <li class="nav__item">
-            <a class="link" href="about.html">О&nbsp;проекте</a>
+            <a class="link" href="about.html"><div><span>О&nbsp;проекте</span></div></a>
           </li>
           <li class="nav__item">
-            <a class="link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+            <a class="link" href="https://praktikum.yandex.ru/"><div><span>Яндекс.Практикум</span></div></a>
           </li>
         </ul>
       </nav>
