--- a/analitics.html
+++ b/analitics.html
@@ -19,11 +19,11 @@
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <ul>
-          <li class="nav__item">
-            <a class="link" href="./index.html">Главная</a>
+          <li class="nav__item nav__item_select">
+            <a class="link" href="./index.html"><div><span>Главная</span></div></a>
           </li>
           <li class="nav__item">
-            <a class="link" href="./about.html">О&nbsp;проекте</a>
+            <a class="link" href="./about.html"><div><span>О&nbsp;проекте</span></div></a>
           </li>
         </ul>
       </nav>
@@ -408,23 +408,21 @@
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
-            <a class="link" href="index.html">Главная</a>
+            <a class="link" href="index.html"><div><span>Главная</span></div></a>
           </li>
           <li class="nav__item">
-            <a class="link" href="about.html">О&nbsp;проекте</a>
+            <a class="link" href="about.html"><div><span>О&nbsp;проекте</span></div></a>
           </li>
           <li class="nav__item">
-            <a class="link" href="https://praktikum.yandex.ru/">Яндекс.Практикум</a>
+            <a class="link" href="https://praktikum.yandex.ru/"><div><span>Яндекс.Практикум</span></div></a>
           </li>
         </ul>
       </nav>
       <div class="social footer__social">
-        <a class="social__item" href="https://github.com/somedew/newsanalyzer">
-          <img alt="github link" src="images/github.svg">
-        </a>
-        <a class="social__item" href="https://facebook.com">
-          <img alt="facebook link" src="images/fb3.svg">
-        </a>
+        <a class="social__item" href="https://github.com/somedew/newsanalyzer"><img alt="github"
+            src="images/github.svg"></a>
+        <a class="social__item" href="https://facebook.com"><img alt="facebook"
+            src="images/fb3.svg"></a>
       </div>
     </footer>
 
