--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@
 <body>
   <div class="page">
 
-    <header class="header header_main-page">
+    <header class="header">
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <ul>
@@ -121,7 +121,11 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
+      <div class="footer__copyright copyright">
+        <span class="copyright__author">©&nbsp;2019&nbsp;Andrew&nbsp;B.<br>
+          <a class="copyright__powered link" href='https://newsapi.org/' target='_blank'>powered&nbsp;by&nbsp;NewsApi.org</a>
+        </span>        
+      </div>
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
