--- a/analitics.html
+++ b/analitics.html
@@ -19,7 +19,7 @@
       <h1 class="header__logo">NewsAnalyzer</h1>
       <nav class="nav header__nav">
         <ul>
-          <li class="nav__item nav__item_select">
+          <li class="nav__item">
             <a class="link" href="./index.html"><div><span>Главная</span></div></a>
           </li>
           <li class="nav__item">
@@ -404,7 +404,11 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
+      <div class="footer__copyright copyright">
+        <span class="copyright__author">©&nbsp;2019&nbsp;Andrew&nbsp;B.<br>
+          <a class="copyright__powered link" href='https://newsapi.org/' target='_blank'>powered&nbsp;by&nbsp;NewsApi.org</a>
+        </span>        
+      </div>
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
