--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
     </main>
 
     <footer class="footer">
-      <p class="copyright footer__copyright">©&nbsp;2019&nbsp;Andrew</p>
+      <div class="footer__copyright copyright">
+        <span class="copyright__author">©&nbsp;2019&nbsp;Andrew&nbsp;B.<br>
+          <a class="copyright__powered link" href='https://newsapi.org/' target='_blank'>powered&nbsp;by&nbsp;NewsApi.org</a>
+        </span>        
+      </div>
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
