JS. Added digits module. Added card default pic

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -117,6 +117,11 @@
 
   </div>
 
+  <!-- Next node use to import image file to webpack build -->
+  <div class="import-resorses">
+    <img src="<%= require('../images/default-cardpic.jpg') %>">
+  </div>
+
   <script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>
 
 </body>
