--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/index.7a38da15d9e7a2937486.css">
+  <link rel="stylesheet" href="styles/index.73accd305f780734b6ad.css">
   <title>NewsAnalizer</title>
 </head>
 
@@ -117,7 +117,12 @@
 
   </div>
 
-  <script src="scripts/index.7a38da15d9e7a2937486.js"></script>
+  <!-- Next node use to import image file to webpack build -->
+  <div class="import-resorses">
+    <img src="images/default-cardpic.jpg">
+  </div>
+
+  <script src="scripts/index.73accd305f780734b6ad.js"></script>
 
 </body>
 
