JS. Digits module done

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -44,10 +44,10 @@
           </ul>
         </nav>
         <h2 class="digits__title">Вы&nbsp;просили:&nbsp;</h2>
-        <span class="digits__request">&laquo;Бубылда - нацональный герой&raquo;</span>
+        <span class="digits__request"></span>
         <div class="digits__block">
-          <p class="digits__header">Новостей&nbsp;за&nbsp;неделю: <span class="digits__per-week">285</span></p>
-          <p class="digits__header">Упоминаний&nbsp;в&nbsp;заголовках: <span class="digits__in-titles">49</span></p>
+          <p class="digits__header">Новостей&nbsp;за&nbsp;неделю: <span class="digits__per-week"></span></p>
+          <p class="digits__header">Упоминаний&nbsp;в&nbsp;заголовках: <span class="digits__in-titles"></span></p>
         </div>
       </section>
 
