JS. Added component Histogram, it is in progress

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -31,7 +31,6 @@
 
     <main class="content">
 
-
       <section class="digits">
         <nav class="digits__nav">
           <ul>
@@ -57,7 +56,7 @@
 
           <div class="histogram">
             <p class="histogram__head-date">дата (сентябрь)</p>
-            <p class="histogram__head-quantity">колличество упоминаний</p>
+            <p class="histogram__head-quantity">количество упоминаний</p>
 
             <div class="histogram__scale">
               <p class="histogram__mark">0</p>
