--- a/analitics.html
+++ b/analitics.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>Analitics</title>
   <link rel="icon" type="image/svg+xml" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/analitics.83c8bca1a5ad16e5cf99.css">
+  <link rel="stylesheet" href="styles/analitics.a071ff99334c45253682.css">
 </head>
 
 <body>
@@ -30,7 +30,6 @@
     </header>
 
     <main class="content">
-
 
       <section class="digits">
         <nav class="digits__nav">
@@ -57,7 +56,7 @@
 
           <div class="histogram">
             <p class="histogram__head-date">дата (сентябрь)</p>
-            <p class="histogram__head-quantity">колличество упоминаний</p>
+            <p class="histogram__head-quantity">количество упоминаний</p>
 
             <div class="histogram__scale">
               <p class="histogram__mark">0</p>
@@ -432,7 +431,7 @@
 
   </div>
 
-  <script src="scripts/analitics.83c8bca1a5ad16e5cf99.js"></script>
+  <script src="scripts/analitics.a071ff99334c45253682.js"></script>
 
 </body>
 
